--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
 	"background": {
 		"service_worker": "background.js"
 	},
-	"permissions": ["tabs","scripting","activeTab","storage"],
+	"permissions": ["scripting","activeTab"],
 	"host_permissions": [
 		"https://www.youtube.com/*"
 	],
